k8s/service-frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
