k8s/sv-mongo.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  clusterIP: None
  selector:
    app: mongodb-service
  ports:
  - port: 27017
    targetPort: 27017
