k8s/ingress-back.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: questionnaire-back-ingress
  annotations:
    nginx.ingress.kubernetes.io/websocket-services: "backend"
spec:
  rules:
  - host: questionnaire.local
    http:
      paths:
      - pathType: Prefix
        path: /socket.io
        backend:
          service:
            name: backend
            port:
              number: 80
